# gg

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  git.rs  main.rs
src/application/: data_refresh.rs  mod.rs  watch_action.rs
src/domain/: mod.rs  repo.rs
src/infrastructure/: cache.rs  github_api.rs  mod.rs
src/tui/: app.rs  matcher.rs  mod.rs  ui.rs
