[package]
name = "gg"
version = "0.2.4"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5.54", features = ["derive", "env"] }
crossterm = "0.29.0"
dirs = "6.0.0"
git2 = "0.20.3"
indicatif = "0.18.3"
nucleo = "0.5.0"
octocrab = "0.49"
open = "5.3.3"
ratatui = "0.30.0"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
mockito = "1.5"
tempfile = "3.14"

[profile.release]
opt-level = 3        # Maximum optimization (default, but explicit)
lto = "fat"          # Link Time Optimization - significant perf boost
codegen-units = 1    # Better optimization at cost of compile time
strip = true         # Strip debug symbols from binary
panic = "abort"      # Reduces binary size and can improve perf
overflow-checks = false # Disable overflow checks in release
